<resources>
    <string name="app_name">智慧岛</string>
    <string name="app_name_test">智慧岛中小学测试</string>
    <string name="crashfilepath">/sdcard/DrpalmError/</string>
    <string name="downloadpath">/WisdomIslandAlbum/下载</string>
    <string name="classcachepath">/WisdomIslandAlbum/缓存/class</string>
    <string name="schoolcachepath">/WisdomIslandAlbum/缓存/school</string>
    <string name="tips">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="update">更新</string>
    <string name="download">下载</string>
    <string name="download_resource">皮肤有更新哦，下载吗？</string>
    <string name="update_resource">皮肤有更新哦，下载吗？</string>
    <string name="downloading">下载资源包中。。。</string>
    <string name="initializeing">初始化资源中。。。</string>
    <string name="replaceing">替换资源中。。。</string>
    <string name="settingfileerror">配置文件不存在或者格式不正确！</string>
    <string name="profilekeyerror">ProfileKey错误</string>
    <string name="profilekeyno_null">ProfileKey不能为空</string>
    <string name="jni_error">网络不给力哦~</string>
    <string name="pleasewait">请稍等...</string>
    <string name="NotWiFi">您开启了[仅WiFi使用]但当前不是Wifi网络连接</string>
    <string name="add">新 增</string>
    <string name="edit">编 辑</string>
    <string name="del">删 除</string>
    <string name="nofunction">该机构未开通此功能</string>
    <string name="detail">详情</string>
    <string name="note">备注</string>
    <string name="label_year">年</string>
    <string name="label_month">月</string>
    <string name="label_day">日</string>
    <string name="label_hours">时</string>
    <string name="label_mins">分</string>
    <string-array name="modulenames">
        <item>学校</item>
        <item>班级</item>label_year
        <item>更多</item>
    </string-array>
    <string name="infant_diet">幼儿食谱</string>
    <string name="parenting">育儿知识</string>
    <string name="courseware">班级计划</string>
    <string name="face2face">家园桥</string>
    <string name="video">班级影音</string>
    <string name="draft">草稿箱</string>
    <string name="sysinfo">系统信息</string>
    <string name="sent">已发消息</string>
    <string name="hjt">互教通\n(考勤)</string>
    <string name="ask4leave">告假申请</string>
    <string name="exit_sure2">要退出E宝贝吗？</string>
    <string name="logout_sure">需要切换学校吗？这样会注销哦</string>
    <string name="enter">进入</string>
    <string name="welcomesharecontent">我刚安装了E宝贝Android客户端，家长可随时随地通过移动终端了解学校简介、校园通知、班级信息、教师反馈、互动交流等信息，加强家校互动，共同关注幼儿成长，动动手指就能搞定，快来体验吧！下载地址：</string>
    <string name="welcomeback">欢迎回来:</string>
    <string name="leave_application">告假</string>
    <string name="leave_type">请假类型：</string>
    <string name="leave_type_sick">病假</string>
    <string name="leave_saySomething">说点什么吧…</string>
    <string name="leave_set_time_error_msg">结束时间比开始时间要早或一样,请重设</string>
    <string name="leave_type_casual">事假</string>
    <string-array name="leave_types">
        <item>病假</item>
        <item>事假</item>
    </string-array>
    <string name="leave_application_time">发布时间：</string>
    <string name="leave_applicant">申请人：</string>
    <string name="leave_reason">请假理由：</string>
    <string name="leave_receiver">接收人：</string>
    <string name="select_all">全选</string>
    <string name="leave_attachment">附件：</string>
    <string name="newestNews">最新校园新闻</string>
    <string name="newestEvents">最新班级新闻</string>
    <string name="exit_sure">再按一次退出程序</string>
    <string name="least_news">最新消息：</string>
    <string name="least_events">事件：</string>
    <string name="last_update">最后更新</string>
    <string name="push_message">推送通告</string>
    <string name="items">条</string>
    <string name="update_success">更新成功</string>
    <string name="update_fail">更新失败,</string>
    <string name="loadmorenews">更多…</string>
    <string name="loading">加载中。。。</string>
    <string name="schoolmail">校长信箱</string>
    <string name="news">校园新闻</string>
    <string name="activity">校园活动</string>
    <string name="album">校园相册</string>
    <string name="news_search_label">News Search</string>
    <string name="news_search_hint">Search articles</string>
    <string name="no_news_bookmarks">You don\'t have any articles bookmarked. To bookmark an article, navigate to that article, press your device\'s Menu button, and tap the \'Add Bookmark\' menu item.</string>
    <string name="searchnews">校园信息搜索</string>
    <string name="marknews">校园信息收藏</string>
    <string name="add_attachment">触碰添加快照</string>
    <string name="attachment_description">快照备注</string>
    <string name="is_del_attachment">是否删除此快照?</string>
    <string name="attachment_exists">附件已存在</string>
    <string-array name="eventscategory">
        <item>班级通知</item>
        <item>班级评语</item>
        <item>班级计划</item>
        <item>班级活动</item>
        <item>班级相册</item>
    </string-array>
    <string-array name="choosephoto">
        <item>拍照</item>
        <item>从相册</item>
    </string-array>
    <string-array name="eventssendtype">
        <item>转发</item>
        <item>替换</item>
    </string-array>
	<string name="type_null">(空)</string>
    <string name="searchevents">班级信息搜索</string>
    <string name="markevents">班级信息收藏</string>
    <string name="events">通告</string>
    <string name="sender">发件人:</string>
    <string name="addressee">收件人</string>
    <string name="senttime">发送时间:</string>
    <string name="location">地点:</string>
    <string name="size">附件大小:</string>
    <string name="start_time">开始:</string>
    <string name="end_time">结束:</string>
    <string name="valid_time">有效期至:</string>
    <string name="all">全部</string>
    <string name="sending">发送中。。。</string>
    <string name="send_success">发送成功</string>
    <string name="send_fail">发送失败</string>
    <string name="readcount">已读</string>
    <string name="totalcount">共发</string>
    <string name="unit">人</string>
    <string name="saveimagefile">保存</string>
    <string name="saveimagefilesuccess">保存成功</string>
    <string name="saveimagefilefailed">保存失败</string>
    <string name="getreplyinfoing">获取回复内容...</string>
    <string name="newest">最新</string>
    <string name="unreadmsg">未读</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="week">周</string>
    <string name="classnews">班级通知</string>
    <string name="urgent">班级通知</string>
    <string name="studentnotice">E宝快照</string>
    <string name="schoolnotice">班级评语</string>
    <string name="homework">最新课件</string>
    <string name="receiver">收件人</string>
    <string name="shortloc">位置</string>
    <string name="title">标题</string>
    <string name="ifeshow">加急</string>
    <string name="content">内容</string>
    <string name="comment">班级评语</string>
    <string name="classactivity">班级活动</string>
    <string name="classalbum">班级相册</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="allday">全天</string>
    <string name="attachment">附件</string>
    <string name="attachments">添加快照</string>
    <string name="retransmission">转发</string>
    <string name="replace">替换</string>
    <string name="receiver_cant_be_null">收件人不能为空</string>
    <string name="title_cant_be_null">请输入标题</string>
    <string name="pic_cant_be_null">请添加照片</string>
    <string name="content_cant_be_null">内容不能为空</string>
    <string name="comment_cant_be_null">评语不能为空</string>
    <string name="date_cant_be_null">日期不能为空</string>
    <string name="camera">拍摄</string>
    <string name="localpic">本地图片 </string>
    <string name="pushsetsuccess">Push设置成功</string>
    <string name="pushsetfailed">Push设置失败</string>
    <string name="network_error">网络有误，拿不到附件数据</string>
    <string name="network_error_noticetype">网络有误，拿不到通告类型</string>
    <string name="download_attachment">该通告包含未下载附件,是否下载后编辑？</string>
    <string name="set_date_warning">开始时间至少早于结束时间1小时</string>
    <string name="set_date_warning2">结束时间至少晚于开始时间1小时</string>
    <string name="attachment_downloading">下载附件中。。。</string>
    <string name="reply">回复人</string>
    <string name="send">发送</string>
    <string name="description">简述</string>
    <string name="replysucceed">回复成功</string>
    <string name="replyfaild">回复失败</string>
    <string name="deleteitem">要删除草稿吗？</string>
    <string name="orgself">发送给自己</string>
    <string name="saveasdraft">要保存为草稿吗?</string>
    <string name="savesucceed">已保存到草稿箱</string>
    <string name="eventscheckedsum">阅读情况:</string>
    <string name="read">已读用户:</string>
    <string name="unread">未读用户:</string>
    <string name="cantreply">班级信息已失效,不能回复了</string>
    <string name="editevent">发送信息</string>
    <string name="feedback">回复:</string>
    <string name="post">发布:</string>
    <string name="msgvideousewifi">建议在WIFI环境下观看</string>
    <string name="summitsucced">提交成功</string>
    <string name="summitfail">提交失败</string>
    <string name="choosecontacts">选择收件人</string>
    <string name="sysinfomaxmsg">只显示最近<g id="part1">%1$s</g>条记录</string>
    <string name="eventsreview">回评</string>
    <string name="select_attachment">选择附件</string>
    <string name="setting">配置</string>
    <string name="tours">校园简介</string>
    <string name="tours_iscall">是否呼叫</string>
    <string name="tours_call">呼叫</string>
    <string name="datausage">数据用量</string>
    <string name="accountmanage">个人信息</string>
    <string name="systemsetting">系统设置</string>
    <string name="help">使用帮助</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="apps_recommend">软件反馈</string>
    <string name="share">分享</string>
    <string name="tellfriend">告诉朋友</string>
    <string name="hotline">客服热线400–700–6560</string>
    <string name="push">推送</string>
    <string name="privacymanage">私隐设定</string>
    <string name="onlyusewifi">仅WiFi使用</string>
    <string name="wifiremind">注意【学校消息通知】需要网络连接(3G/WiFi)，可能会占用您的数据流量，建议在使用漫游服务时，打开此功能。</string>
    <string name="autorefresh">自动刷新</string>
    <string name="autorefreshnews">新闻</string>
    <string name="autorefreshevents">通告</string>
    <string name="parentlock">离线锁</string>
    <string name="parentlockon">开启离线锁</string>
    <string name="parentlockoff">关闭离线锁</string>
    <string name="modifyparentlockpwd">修改离线锁密码</string>
    <string name="password">密码</string>
    <string name="newpassword">新密码</string>
    <string name="repeatpassword">确认密码</string>
    <string name="voiceprompt">声音提示</string>
    <string name="vibrationprompt">震动提示</string>
    <string name="pushtime">推送时间段</string>
    <string name="cleanofflinenews">清除校园消息</string>
    <string name="iscleanofflinenews">是否清除校园消息?</string>
    <string name="cleanofflineevents">清除班级消息</string>
    <string name="iscleanofflineevents">是否清除班级消息?</string>
    <string name="oldpassword_error">原始密码错误</string>
    <string name="password_error">密码错误</string>
    <string name="pwdorrepeatpwd_cant_be_null">密码或确认密码不能为空</string>
    <string name="pwdandrepeatpwd_isnt_consistent">密码和确认密码不一致</string>
    <string name="kindergartens">校园集合</string>
    <string name="about">关于E宝贝</string>
    <string name="version">版本</string>
    <string name="aboutchinacampus">关于大塘拔萃</string>
    <string name="about_detailed">E宝贝是面向教育机构的家园沟通平台，家长可随时随地通过E宝贝了解教育机构简介、通知、课程信息和互动交流等，加强与学校间的互动，共同关注宝贝成长。如果您有改进和更新功能的建议，我们非常乐意倾听。</string>
    <string name="copyright">运营服务商:广州澳星软件科技有限公司\n服务热线:400-700-6560\n技术研发商:广州热点软件有限公司</string>
    <string name="remenber_profile_key">记住Profile key</string>
    <string name="profile_key_prompt">请输入Profile Key</string>
    <string name="customhttp">申请定制:</string>
    <string name="telephone_call">或拨打电话客户热线:</string>
    <string name="company">城市热点有限公司</string>
    <string name="loginaccount">帐号</string>
    <string name="loginpwd">密码</string>
    <string name="system_cancel">取消</string>
    <string name="bindaccount_ChooseSchool">选择学校:</string>
    <string name="bindaccount_btn">立即关联</string>
    <string name="attendance_all_status">考勤综合情况:</string>
    <string name="attendance_unusual">异常:</string>
    <string name="attendance_normal">正常:</string>
    <string name="attendance_absent">缺勤:</string>
</resources>