<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_main"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/bindaccount_chooseschool_layout"
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:background="@drawable/top_switcher_collapsed" >

        <Button
            android:id="@+id/bindaccount_chooseschool"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:background="@color/transparent"
            android:layout_marginLeft="16dp"
            android:gravity="center_vertical"
            android:hint="@string/bindaccount_ChooseSchool"
            android:maxLength="20"
            android:clickable="false"
            android:singleLine="true"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="168dp"
        android:layout_margin="8dp"
        android:background="@drawable/boder"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/bindaccount_username"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@drawable/boder"
            android:drawableLeft="@drawable/login_head_icon"
            android:gravity="center_vertical"
            android:hint="@string/loginaccount"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/bindaccount_userpwd"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@drawable/boder"
            android:drawableLeft="@drawable/login_pw_icon"
            android:gravity="center_vertical"
            android:hint="@string/loginpwd"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="#000000" />

        <Button
            android:id="@+id/bindaccount_btn"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@drawable/login_btn_log_selector"
            android:text="@string/bindaccount_btn"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>