<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="horizontal">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/date_layout"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:paddingLeft="5dp"
                  android:paddingTop="12dp">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                        android:layout_gravity="center"
                    android:text="@string/label_year"/>
            <com.drcom.drpalm.View.controls.wheel.WheelView android:id="@+id/year"
                                                            android:layout_height="wrap_content"
                                                            android:layout_width="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                    android:text="@string/label_month"/>
            <com.drcom.drpalm.View.controls.wheel.WheelView android:id="@+id/month"
                                                            android:layout_height="wrap_content"
                                                            android:layout_width="wrap_content"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                    android:text="@string/label_day"/>
            <com.drcom.drpalm.View.controls.wheel.WheelView android:id="@+id/day"
                                                            android:layout_height="wrap_content"
                                                            android:layout_width="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/time_layout"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:paddingRight="5dp"
                  android:paddingTop="12dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/label_hours"/>
        <com.drcom.drpalm.View.controls.wheel.WheelView android:id="@+id/hours"
                                                        android:layout_height="wrap_content"
                                                        android:layout_width="60dp"/>
            </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:text="@string/label_mins"/>
        <com.drcom.drpalm.View.controls.wheel.WheelView android:id="@+id/mins"
                                                        android:layout_height="wrap_content"
                                                        android:layout_width="60dp"/>
            </LinearLayout>
    </LinearLayout>

</LinearLayout>